# plano

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  TEST_COVERAGE_ANALYSIS.md  architecture.md  build_filter_image.sh  index.html  install.sh  objects.inv  package-lock.json  package.json  plano_config.yaml  search.html  searchindex.js
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker-push-main.yml  docker-push-release.yml  docker-security-scan.yml  e2e_plano_tests.yml  e2e_test_currency_convert.yml  e2e_test_preference_based_routing.yml  e2e_tests.yml  e2e_tests_parallel.yml  parity-signals.yml  pre-commit.yml  publish-binaries.yml  publish-pypi.yml  static.yml  update-providers.yml  validate_arch_config.yml  validate_plano_config.yml
_downloads/c86f9e8fb1f2994b1ba4a0b98481410e/: plano_config_full_reference.yaml
_static/: documentation_options.js
apps/planohelper/: .env.example  .gitignore  README.md  next.config.ts  package.json  tsconfig.json  vercel.json
apps/www/: env.local.example  next.config.ts  package.json
cli/: README.md  pyproject.toml
cli/planoai/: __init__.py  chatgpt_auth.py  chatgpt_cmd.py  chatgpt_watchdog.py  claude_desktop.py  config_generator.py  config_providers.py  config_validator.py  consts.py  core.py  defaults.py  docker_cli.py  init_cmd.py  launch_cmd.py  local_agent_warning.py  main.py  native_binaries.py  native_runner.py  obs_cmd.py  rich_click_config.py  skills.py  skills_cmd.py  template_sync.py  trace_cmd.py  trace_listener_runtime.py  utils.py
cli/test/: test_claude_desktop.py  test_cli_agent.py  test_config_generator.py  test_defaults.py  test_docker_cli.py  test_init.py  test_launch_cmd.py  test_obs_collector.py  (+9 more)
concepts/: agents.html  filter_chain.html  listeners.html  prompt_target.html  signals.html
config/: arch_config_schema.yaml  docker-compose.dev.yaml  envoy.template.yaml  plano_config_schema.yaml  supervisord.conf  validate_plano_config.sh
crates/: Cargo.toml  README.md
crates/plano-cli/: Cargo.toml  build.rs
crates/plano-cli/src/: consts.rs  main.rs  utils.rs  version.rs
crates/plano-cli/src/commands/: build.rs  cli_agent.rs  down.rs  init.rs  logs.rs  mod.rs  render_config.rs  self_update.rs  up.rs  validate.rs
crates/plano-cli/src/config/: generator.rs  mod.rs  validation.rs
crates/plano-cli/src/docker/: mod.rs
crates/plano-cli/src/native/: binaries.rs  mod.rs  runner.rs
crates/plano-cli/src/trace/: daemon.rs  down.rs  listen.rs  mod.rs  show.rs  store.rs  tail.rs
crates/plano-cli/templates/: preference_aware_routing.yaml
demos/: README.md
demos/agent_orchestration/multi_agent_ag2/: README.md  config.yaml  pyproject.toml  run_demo.sh  start_agents.sh
demos/agent_orchestration/multi_agent_ag2/ag2/: research_agent.py
demos/filter_chains/peyeeye/: Dockerfile  README.md  config.yaml  peyeeye.py  pyproject.toml  run_demo.sh  start_agents.sh  test.sh  test_peyeeye.py
demos/use_cases/credit_risk_case_copilot/: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yaml  pyproject.toml  start.sh  test.rest
demos/use_cases/credit_risk_case_copilot/scenarios/: scenario_a_low_risk.json  scenario_b_medium_risk.json  scenario_c_high_risk_injection.json
demos/use_cases/credit_risk_case_copilot/src/credit_risk_demo/: __init__.py  case_service.py  pii_filter.py  risk_crew_agent.py  ui_streamlit.py
demos/use_cases/langchain/: README.md  config.yaml  docker-compose.yaml  gateway_test.rest  pyproject.toml
demos/use_cases/langchain/src/travel_agents/: __init__.py  flight_agent.py  weather_agent.py
docs/: DATA_CONTRACTS.md  ROADMAP.md  requirements.txt  routing-api.md  routing_service_blog.md
get_started/: intro_to_plano.html  overview.html  quickstart.html
guides/: function_calling.html  llm_router.html  orchestration.html  prompt_guard.html  state.html
includes/: llms.txt  provider_models.yaml
migrations/: 001_initial_schema.sql  002_firewall_mode.sql  003_egress_ip.sql
resources/: cli_reference.html  configuration_reference.html  deployment.html  llms_txt.html
skills/: AGENTS.md  README.md  test-cases.json
tests/: test_failover_exploration.py  test_failover_preservation.py
(+506 files in other folders)
